[package]
name = "halo2_fib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = "0.1"
rand_core = { version = "0.6", default-features = false }
group = "0.12"
plotters = "0.3.4"
fast-math = "0.1"
halo2_proofs = { package = "halo2_proofs", git = "https://github.com/privacy-scaling-explorations/halo2", features = ["dev-graph"], tag = "v2022_09_10"}
halo2curves = {git = "https://github.com/privacy-scaling-explorations/halo2curves"}
clap = { version = "4.0", features = ["derive"] }